--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                         <input
                                             class="input"
                                             type="text"
-                                            placeholder="Passphrase - required"
+                                            placeholder="Passphrase"
                                             id="input-passphrase"
                                         />
                                         <span class="icon is-small is-left">
@@ -65,6 +65,10 @@
                                         </a>
                                     </div>
                                 </div>
+                                <p
+                                    class="help is-danger"
+                                    id="passphrase-help"
+                                ></p>
                             </div>
                         </div>
                         <div class="panel-block">
@@ -91,12 +95,15 @@
                     </nav>
                 </div>
                 <div class="column">
-                    <textarea
-                        class="textarea"
-                        placeholder="Enter your secret here ..."
-                        rows="18"
-                        id="text-secret"
-                    ></textarea>
+                    <div class="field">
+                        <textarea
+                            class="textarea"
+                            placeholder="Enter the secret you want to share here ..."
+                            rows="18"
+                            id="text-secret"
+                        ></textarea>
+                        <p class="help is-danger" id="secret-help"></p>
+                    </div>
                 </div>
             </div>
         </div>
