--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <script defer src="./script.js" type="module"></script>
     </head>
     <body>
-        <div class="container mb-6 p-3">
+        <div class="container mb-6 p-2">
             <nav
-                class="navbar mb-6"
+                class="navbar mb-6 pt-3"
                 role="navigation"
                 aria-label="main navigation"
             >
@@ -115,12 +115,18 @@
         <footer class="footer">
             <div class="content has-text-centered">
                 <p>
-                    <strong>Wispr</strong> made with ❤️ by
-                    <a href="https://github.com/hakro/wispr">Hakro</a>. The
-                    source code is licensed
-                    <a href="http://opensource.org/licenses/mit-license.php"
+                    <a href="https://github.com/hakro/wispr" target="_blank"
+                        ><strong>Wispr</strong></a
+                    >
+                    made with ❤️ by
+                    <a href="https://github.com/hakro" target="_blank">Hakro</a
+                    >.
+                    <a
+                        href="http://opensource.org/licenses/mit-license.php"
+                        target="_blank"
                         >MIT</a
                     >
+                    licensed
                 </p>
             </div>
         </footer>
